plugins {
    id 'org.springframework.boot' version '3.0.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id "io.freefair.lombok" version "6.5.0.3"
}

group = 'com.mangu'
version = '0.0.2-SNAPSHOT'
sourceCompatibility = '18'

bootRun {
    environment SPRING_PROFILES_ACTIVE: environment.SPRING_PROFILES_ACTIVE ?: 'local'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
    testImplementation group: 'org.springframework.security', name: 'spring-security-test'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    runtimeOnly('org.postgresql:postgresql')
    implementation('org.springdoc:springdoc-openapi-ui:1.6.11')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'

}

test {
    useJUnitPlatform()
}
